@@ -5,6 +5,7 @@ Changelog
 2.9.3 (unreleased)
 ------------------
 
+- Support datagrid GridRow serialization/deserialization of RelationValues [mathias.leimgruber]
 - No longer install "splinter" extra from "ftw.testing". [mbaechtold]
 
 
